kubernetes/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shadowmail-flask-service
  labels:
    app: shadowmail
    component: flask
  namespace: shadowmail
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: shadowmails
    component: flask
