kubernetes/flask/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-nginx-ingress
  namespace: shadowmail
  labels:
    app: shadowmail
    component: flask
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
          location /metrics {
            return 404;
          }
spec:
  tls:
  - hosts:
    - ${DOMAIN_NAME}
    - www.${DOMAIN_NAME}
    secretName: shadowmail-tls
  rules:
  - host: www.${DOMAIN_NAME}
    http:
      paths:
      - backend:
          serviceName: shadowmail-flask-service
          servicePort: 8000
  - host: ${DOMAIN_NAME}
    http:
      paths:
      - backend:
          serviceName: shadowmail-flask-service
          servicePort: 8000
